--- a/admin.html
+++ b/admin.html
@@ -561,7 +561,7 @@
                     userId: 'user_test_12345',
                     amount: 250.00,
                     method: 'UPI ID',
-                    upiId: 'wpay123@upi',
+                    upiId: '9326195985@ibl',
                     transactionId: 'TXN123456789',
                     timestamp: new Date(Date.now() - 86400000).toISOString(),
                     status: 'approved',
@@ -571,7 +571,7 @@
                     userId: 'user_player2_67890',
                     amount: 500.00,
                     method: 'QR Code',
-                    upiId: 'wpay123@upi',
+                    upiId: '9326195985@ibl',
                     transactionId: 'TXN987654321',
                     timestamp: new Date(Date.now() - 172800000).toISOString(),
                     status: 'approved',
@@ -586,7 +586,7 @@
                     userId: 'user_pending_11111',
                     amount: 100.00,
                     method: 'UPI ID',
-                    upiId: 'wpay123@upi',
+                    upiId: '9326195985@ibl',
                     transactionId: 'TXN111111111',
                     timestamp: new Date(Date.now() - 1800000).toISOString(), // 30 minutes ago
                     status: 'pending'
@@ -595,7 +595,7 @@
                     userId: 'user_pending_22222',
                     amount: 300.00,
                     method: 'QR Code',
-                    upiId: 'wpay123@upi',
+                    upiId: '9326195985@ibl',
                     transactionId: 'TXN222222222',
                     timestamp: new Date(Date.now() - 900000).toISOString(), // 15 minutes ago
                     status: 'pending'
@@ -604,7 +604,7 @@
                     userId: 'user_pending_33333',
                     amount: 500.00,
                     method: 'UPI ID',
-                    upiId: 'wpay123@upi',
+                    upiId: '9326195985@ibl',
                     transactionId: null,
                     timestamp: new Date(Date.now() - 300000).toISOString(), // 5 minutes ago
                     status: 'pending'
